[project]
name = "mlpacke"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Apolo-at-403082213880", email = "apoloferreirasantos@yahoo.com.br" }
]
requires-python = ">=3.11.10"
dependencies = [
    "boto3>=1.37.18",
]

[project.scripts]
mlpacke = "mlpacke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
